# trame-cookiecutter

./: README.md  cookiecutter.json
hooks/: post_gen_project.py  pre_gen_project.py
vue-{{cookiecutter.name}}/: package.json  vue.config.js
vue-{{cookiecutter.name}}/src/components/: index.js
{{cookiecutter.import_name}}/: MANIFEST.in  README.rst
{{cookiecutter.import_name}}/{{cookiecutter.import_name}}/app/: engine.py  ui.py
{{cookiecutter.import_name}}/{{cookiecutter.import_name}}/html/: __init__.py
{{cookiecutter.import_name}}/{{cookiecutter.import_name}}/html/module/: __init__.py
{{cookiecutter.name}}/app/: controller.py  engine.py  main.py  ui.py
{{cookiecutter.name}}/html/module/: __init__.py
{{cookiecutter.package_name}}/: .codespellrc  .flake8  .pre-commit-config.yaml  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.rst  noxfile.py  pyproject.toml  setup.cfg
{{cookiecutter.package_name}}/.github/workflows/: test_and_release.yml
{{cookiecutter.package_name}}/bundles/desktop/: README.md  create_exe.bat  create_linux.sh
{{cookiecutter.package_name}}/bundles/desktop/macOS/: setup.py
{{cookiecutter.package_name}}/bundles/desktop/windows/: README.md  run.py
{{cookiecutter.package_name}}/bundles/docker/: DEPLOY.md  Dockerfile  README.md
{{cookiecutter.package_name}}/bundles/docker/scripts/: build_image.sh  build_server.sh  run_image.sh  run_server.sh
{{cookiecutter.package_name}}/bundles/docker/setup/: apps.yml  initialize.sh
{{cookiecutter.package_name}}/examples/desktop/: README.md  create_exe.bat  create_linux.sh  create_mac.sh  requirements.txt  run.py
{{cookiecutter.package_name}}/examples/docker/: Dockerfile  README.md
{{cookiecutter.package_name}}/examples/jupyter/: loop.ipynb  proxy.ipynb  show.ipynb
{{cookiecutter.package_name}}/src/trame/modules/: {{cookiecutter.import_name}}.py
{{cookiecutter.package_name}}/src/trame/widgets/: {{cookiecutter.module_short_name}}.py
{{cookiecutter.package_name}}/src/{{cookiecutter.import_name}}/app/: core.py  main.py
{{cookiecutter.package_name}}/src/{{cookiecutter.import_name}}/module/: __init__.py
{{cookiecutter.package_name}}/src/{{cookiecutter.import_name}}/widgets/: {{cookiecutter.module_short_name}}.py
{{cookiecutter.package_name}}/tests/: test_import.py
{{cookiecutter.package_name}}/trame/widgets/: {{cookiecutter.import_name}}.py
{{cookiecutter.package_name}}/vue-components/: package.json  vite.config.js  vue.config.js
{{cookiecutter.package_name}}/vue-components/src/: use.js
{{cookiecutter.package_name}}/vue-components/src/components/: CustomWidget.js  index.js  style.css
{{cookiecutter.package_name}}/vue-components/src/components/CustomWidget/: style.css  template.html
{{cookiecutter.package_name}}/{{cookiecutter.import_name}}/: __init__.py
{{cookiecutter.package_name}}/{{cookiecutter.import_name}}/app/: __init__.py  controller.py  core.py  engine.py  jupyter.py  main.py  ui.py
{{cookiecutter.package_name}}/{{cookiecutter.import_name}}/module/: __init__.py
{{cookiecutter.package_name}}/{{cookiecutter.import_name}}/widgets/: {{cookiecutter.import_name}}.py
