[project]
name = "{{ cookiecutter.package_name }}"
version = "1.0.0"
description = "{{ cookiecutter.short_description }}"
authors = [
    {name = "{{ cookiecutter.author }}"},
]
dependencies = [
{%- if cookiecutter.include_components_only %}
    "trame_client>=3.5",
{%- else %}
    "trame>=3.7.1",
    "trame-vuetify",
    "trame-vtk",
{%- endif %}
]
requires-python = ">=3.9"
readme = "README.rst"
license = {text = "{{ cookiecutter.license }}"}
keywords = ["Python", "Interactive", "Web", "Application", "Framework"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
{%- if cookiecutter.is_open_source %}
    "License :: OSI Approved :: {{ cookiecutter.license }}",
{%- else %}
    "License :: Other/Proprietary License",
{%- endif %}
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
app = [
    "pywebview",
]
jupyter = [
    "jupyterlab",
]
dev = [
    "pre-commit",
    "ruff",
    "pytest",
]
{%- if cookiecutter.include_app %}

[project.scripts]
{{cookiecutter.entry_point}} = "{{cookiecutter.import_name}}.app:main"
{%- endif %}

[build-system]
requires = ['setuptools', 'wheel']
build-backend = 'setuptools.build_meta'

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
{{cookiecutter.import_name}} = [
    "**/*.js",
    "**/*.css",
]

{%- if cookiecutter.include_ci %}
[tool.semantic_release]
version_variables = [
    "{{cookiecutter.import_name}}/__init__.py:__version__",
]
version_toml = [
    "pyproject.toml:project.version",
]
build_command = """
  python -m venv .venv
  source .venv/bin/activate
  pip install -U pip build
  python -m build .
"""

[semantic_release.publish]
dist_glob_patterns = ["dist/*"]
upload_to_vcs_release = true
{%- endif %}

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py39"

[tool.ruff.lint]
select = ["E", "W", "F"]
ignore = []
fixable = ["ALL"]
unfixable = []


[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true

# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"

[tool.ruff.lint.pycodestyle]
max-line-length = 120

[lint.pydocstyle]
convention = "google"
