[metadata]
name = {{ cookiecutter.package_name }}
version = 1.0.0
description = {{ cookiecutter.short_description }}
long_description = file: README.rst
author = {{ cookiecutter.author }}
license = {{ cookiecutter.license }}
classifiers =
    Development Status :: 1 - Planning
    Environment :: Web Environment
{%- if cookiecutter.is_open_source %}
    License :: OSI Approved :: {{ cookiecutter.license }}
{%- else %}
    License :: Other/Proprietary License
{%- endif %}
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: JavaScript
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules
keywords =
    Python
    Interactive
    Web
    Application
    Framework

[options]
packages = find:
include_package_data = True
install_requires =
    trame
    # vtk
    # pandas
    # numpy
    # altair
    # mpld3
    # plotly
    # simput
    # pydeck

{%- if cookiecutter.include_app %}

[options.entry_points]
console_scripts =
    {{cookiecutter.entry_point}} = {{cookiecutter.import_name}}:main
{%- endif %}
