[metadata]
name = {{ cookiecutter.package_name }}
version = 1.0.0
description = {{ cookiecutter.short_description }}
long_description = file: README.rst
long_description_content_type = text/x-rst
author = {{ cookiecutter.author }}
license = {{ cookiecutter.license }}
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
{%- if cookiecutter.is_open_source %}
    License :: OSI Approved :: {{ cookiecutter.license }}
{%- else %}
    License :: Other/Proprietary License
{%- endif %}
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: JavaScript
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules
keywords =
    Python
    Interactive
    Web
    Application
    Framework

[options]
packages = find:
include_package_data = True
install_requires =
{%- if cookiecutter.include_components_only %}
    trame_client
{%- else %}
    trame>=2.0.0rc2
{%- endif %}
    # vtk
    # pandas
    # numpy
    # altair
    # mpld3
    # plotly
    # pydeck

{%- if cookiecutter.include_app %}

[options.entry_points]
console_scripts =
    {{cookiecutter.entry_point}} = {{cookiecutter.import_name}}:main
jupyter_serverproxy_servers =
    {{cookiecutter.entry_point}} = {{cookiecutter.import_name}}.app.jupyter:jupyter_proxy_info
{%- endif %}

{%- if cookiecutter.include_ci %}
[semantic_release]
version_pattern = setup.cfg:version = (\d+\.\d+\.\d+)
{%- endif %}
